# AeroVortexSimulator

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  build_and_run.bat
models/: f104_starfighter.glb
src/: app.cpp  app.h  main.cpp
src/core/: aero_forces.cpp  aero_forces.h  lbm2d.cu  lbm2d.cuh  lbm3d.cu  lbm3d.cuh  log.h  voxelizer.cpp  voxelizer.h
src/export/: data_export.cpp  data_export.h
src/geometry/: mesh.h  model_loader.cpp  model_loader.h  primitives.cpp  primitives.h
src/ui/: gui.cpp  gui.h
src/visualization/: camera.h  field2d.cpp  field2d.h  particles.cpp  particles.h  renderer.cpp  renderer.h  slice_plane.cpp  slice_plane.h  streamlines.cpp  streamlines.h  surface_pressure.cpp  surface_pressure.h  volume_renderer.cpp  volume_renderer.h
